--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is an example project</h1>
+    <header>
+      <a href="">WEBSTUDIO</a>
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+      <h1>
+        Effective Solutions<br />
+        for Your Business<br />
+      </h1>
+    </main>
+    <footer>
+      <a href="">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and<br />
+        sales for your business with digital<br />
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
