--- a/index.html
+++ b/index.html
@@ -23,6 +23,38 @@
         Effective Solutions<br />
         for Your Business<br />
       </h1>
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="">WEBSTUDIO</a>
