--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           </li>
         </ul>
       </section>
+      <section>
+        <img src="img/Camila Garcia.jpg" alt="img/Camila Garcia">
+      </section>
     </main>
     <footer>
       <a href="">WEBSTUDIO</a>
