--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
-      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <main>
-      <h1>
-        Effective Solutions<br />
-        for Your Business<br />
-      </h1>
+      <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
       <section>
         <ul>
@@ -61,7 +58,7 @@
         <ul>
           <li>
             <img
-              src="img/Mark Guerrero.jpg"
+              src="img/mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -71,7 +68,7 @@
           </li>
           <li>
             <img
-              src="img/Tom Ford.jpg"
+              src="img/tom_ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -81,7 +78,7 @@
           </li>
           <li>
             <img
-              src="img/Camila Garcia.jpg"
+              src="img/camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -91,7 +88,7 @@
           </li>
           <li>
             <img
-              src="img/Daniel Wilson.jpg"
+              src="img/daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -105,8 +102,7 @@
     <footer>
       <a href="">WEBSTUDIO</a>
       <p>
-        Increase the flow of customers and<br />
-        sales for your business with digital<br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
