--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <main>
