--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -100,7 +100,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
