--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>
+          Effective Solutions<br />
+          for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <ul>
           <li>
