--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h2>Strategy</h2>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -68,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="img/mark_guerrero.jpg"
+              src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="img/tom_ford.jpg"
+              src="./images/tom_ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="img/camila_garcia.jpg"
+              src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -98,7 +98,7 @@
           </li>
           <li>
             <img
-              src="img/daniel_wilson.jpg"
+              src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
